# ic-fyp

./: .gitignore  README.md  spawn_multiple_goal_viz.sh  todo.md
doc/CBS Illus/: cbs_flow
doc/Code Illus/: check_connection.drawio  dist_to_aabb.drawio  dwa_flowchart.drawio  dwa_m_state_machine.drawio  dwa_project.drawio  dwa_r_state_machine.drawio  dwa_replan_condition.drawio  find_extension.drawio  global_planner.drawio  goal_arbitration.drawio  local_minima.drawio  move_to_goal_diff_drive.drawio  odom_distribution.drawio  path_choice.drawio  planner_sequence.drawio  random_path_choice.drawio  stall_detection.drawio  stall_detection_robot.drawio  system_architecture.drawio
doc/DWA Illus/: dwa_diagram.drawio
doc/diagrams/: dwa_diagram
evaluation/: config.py  create_test_scenarios.py  evaluate_planners.bash  visualise_results.py
src/multirobot_control/: create_test_scenarios.py  evaluate_planners.bash  package.xml  setup.cfg  setup.py
src/multirobot_control/launch/: individual_bot.launch.py  individual_bot_nav_bringup.launch.py  localization.launch.py  navigation.launch.py  spawn_bot.launch.py  spawn_bots.launch.py  (+1 more)
src/planner_action_interfaces/: CMakeLists.txt  package.xml
src/robot_base/: package.xml  setup.cfg  setup.py
src/robot_base/config/: ekf.yaml  nav2_params.yaml
src/robot_base/launch/: gazebo_sim.launch.py  launch_urdf_into_gazebo.launch.py  rviz_disp.launch.py
src/robot_base/robot_base/: my_node.py
src/robot_base/urdf/: dimensions.xacro  gazebo_plugins.xacro  inertia_properties.xacro  materials.xacro  robot_base.xacro  urdf.rviz
(+58 files in other folders)
